<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kg.taskapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_task_fragment"
            app:destination="@id/task_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kg.taskapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kg.taskapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/task_fragment"
        android:name="com.kg.taskapp.ui.task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" >
        <argument
            android:name="contentForEdit"
            app:argType="com.kg.taskapp.model.Task"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kg.taskapp.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.kg.taskapp.ui.onBoard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/authFragment"
        android:name="com.kg.taskapp.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" />
    <fragment
        android:id="@+id/authWithPhoneNumberFragment"
        android:name="com.kg.taskapp.ui.auth.withPhoneNumber.AuthWithPhoneNumberFragment"
        android:label="fragment_auth_with_phone_number"
        tools:layout="@layout/fragment_auth_with_phone_number" />
</navigation>